# iroh-blake3

./: Cargo.toml  README.md
.github/workflows/: ci.yml
b3sum/: Cargo.toml
b3sum/src/: main.rs  unit_tests.rs
b3sum/tests/: cli_tests.rs
benches/: bench.rs
c/: blake3.c  blake3_avx2.c  blake3_avx2_x86-64_unix.S  blake3_avx2_x86-64_windows_gnu.S  blake3_avx2_x86-64_windows_msvc.asm  blake3_avx512.c  blake3_avx512_x86-64_unix.S  blake3_avx512_x86-64_windows_gnu.S  blake3_avx512_x86-64_windows_msvc.asm  blake3_dispatch.c  blake3_impl.h  blake3_neon.c  blake3_portable.c  blake3_sse2.c  blake3_sse2_x86-64_unix.S  blake3_sse2_x86-64_windows_gnu.S  blake3_sse2_x86-64_windows_msvc.asm  blake3_sse41.c  blake3_sse41_x86-64_unix.S  blake3_sse41_x86-64_windows_gnu.S  blake3_sse41_x86-64_windows_msvc.asm
c/blake3_c_rust_bindings/benches/: bench.rs
c/blake3_c_rust_bindings/src/: lib.rs  test.rs
src/: ffi_avx2.rs  ffi_avx512.rs  ffi_neon.rs  ffi_sse2.rs  ffi_sse41.rs  guts.rs  lib.rs  platform.rs  serde.rs  test.rs
test_vectors/: Cargo.toml  cross_test.sh
test_vectors/src/: lib.rs
