[package]
name = "test_vectors"
version = "0.0.0"
edition = "2021"

[features]
neon = ["iroh-blake3/neon"]
prefer_intrinsics = ["iroh-blake3/prefer_intrinsics"]
pure = ["iroh-blake3/pure"]
m
[dependencies]
# If you ever change these path dependencies, you'll probably need to update
# cross_test.sh, or CI will break. I'm sorry >.<
iroh-blake3 = { path = "../" }
hex = "0.4.0"
reference_impl = { path = "../reference_impl" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
